--- a/projects/demo/src/app/app.html
+++ b/projects/demo/src/app/app.html
@@ -21,8 +21,7 @@
   
   <mat-card class="demo-card">
     <mat-card-header>
-      <mat-card-title>Progress Bar Controls</mat-card-title>
-      <mat-card-subtitle>Test the different progress bar functions</mat-card-subtitle>
+      <mat-card-title>Test the different progress bar functions</mat-card-title>
     </mat-card-header>
     
     <mat-card-content>
